--- a/msbot/msbot_tutorial.ipynb
+++ b/msbot/msbot_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "falling-persian",
+   "id": "chronic-devil",
    "metadata": {},
    "source": [
     "## Sending information about one relevant paper"
@@ -10,36 +10,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "biblical-illinois",
+   "id": "unique-private",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "noted-granny",
+   "id": "surgical-matrix",
    "metadata": {},
    "source": [
-    "### Use arxiv_majorana_crawler to find a relevant paper"
+    "### Find relevant paper from data"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "mighty-protection",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
-   "id": "rapid-leisure",
+   "id": "conventional-outline",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:15.778678Z",
      "start_time": "2021-01-27T07:51:15.299095Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
     "# Import fetch_arxiv\n",
-    "path_arxiv_crawler_1 = \"../../\"\n",
-    "path_arxiv_crawler_2 = \"../../arxiv_majorana_crawler\"\n",
+    "path_arxiv_crawler_1 = \"/../\"\n",
+    "path_arxiv_crawler_2 = \"/../arxiv_majorana_crawler\"\n",
     "import sys\n",
     "sys.path.append(path_arxiv_crawler_1)\n",
     "sys.path.append(path_arxiv_crawler_2)\n",
@@ -49,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "grateful-revision",
+   "id": "israeli-sessions",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:15.784505Z",
@@ -58,13 +64,13 @@
    },
    "outputs": [],
    "source": [
-    "query_imput = \"../search_query_list.txt\""
+    "query_imput = \"search_query_list.txt\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "specified-flower",
+   "id": "initial-montana",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:16.968229Z",
@@ -79,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "interracial-capture",
+   "id": "concrete-amplifier",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:16.978238Z",
@@ -102,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conditional-hopkins",
+   "id": "numerous-canberra",
    "metadata": {},
    "source": [
     "### Create link to webhook in Teams"
@@ -111,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "plain-desktop",
+   "id": "improving-clerk",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.086257Z",
@@ -127,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "tired-toddler",
+   "id": "emerging-reasoning",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.090226Z",
@@ -144,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "casual-compromise",
+   "id": "robust-metadata",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.100221Z",
@@ -159,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "given-reservoir",
+   "id": "narrative-tribune",
    "metadata": {},
    "source": [
     "### Fill in message and send it"
@@ -168,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "forced-spain",
+   "id": "future-wrist",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.273232Z",
@@ -183,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "independent-dollar",
+   "id": "public-department",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.495224Z",
@@ -198,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "interesting-number",
+   "id": "loose-hobby",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:18.470534Z",
@@ -224,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "african-riding",
+   "id": "horizontal-kennedy",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -232,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mysterious-monaco",
+   "id": "inside-complaint",
    "metadata": {},
    "outputs": [],
    "source": []
