--- a/msbot/msbot_tutorial.ipynb
+++ b/msbot/msbot_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "chronic-devil",
+   "id": "utility-template",
    "metadata": {},
    "source": [
     "## Sending information about one relevant paper"
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unique-private",
+   "id": "objective-patent",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "surgical-matrix",
+   "id": "bacterial-supervision",
    "metadata": {},
    "source": [
     "### Find relevant paper from data"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mighty-protection",
+   "id": "nominated-prophet",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -33,19 +33,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "conventional-outline",
+   "id": "designed-tunnel",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T07:51:15.778678Z",
-     "start_time": "2021-01-27T07:51:15.299095Z"
+     "end_time": "2021-01-27T10:35:55.024833Z",
+     "start_time": "2021-01-27T10:35:50.602410Z"
     },
     "code_folding": []
    },
    "outputs": [],
    "source": [
     "# Import fetch_arxiv\n",
-    "path_arxiv_crawler_1 = \"/../\"\n",
-    "path_arxiv_crawler_2 = \"/../arxiv_majorana_crawler\"\n",
+    "path_arxiv_crawler_1 = \"../../\"\n",
+    "path_arxiv_crawler_2 = \"../../arxiv_majorana_crawler\"\n",
     "import sys\n",
     "sys.path.append(path_arxiv_crawler_1)\n",
     "sys.path.append(path_arxiv_crawler_2)\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "israeli-sessions",
+   "id": "hungarian-concrete",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:15.784505Z",
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "initial-montana",
+   "id": "shared-imaging",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:16.968229Z",
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "concrete-amplifier",
+   "id": "prescribed-intro",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:16.978238Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numerous-canberra",
+   "id": "maritime-soldier",
    "metadata": {},
    "source": [
     "### Create link to webhook in Teams"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "improving-clerk",
+   "id": "minute-wallpaper",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.086257Z",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "emerging-reasoning",
+   "id": "demonstrated-employment",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.090226Z",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "robust-metadata",
+   "id": "fatal-order",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.100221Z",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "narrative-tribune",
+   "id": "ethical-progress",
    "metadata": {},
    "source": [
     "### Fill in message and send it"
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "future-wrist",
+   "id": "danish-viewer",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.273232Z",
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "public-department",
+   "id": "possible-identification",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.495224Z",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "loose-hobby",
+   "id": "elder-reception",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:18.470534Z",
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "horizontal-kennedy",
+   "id": "simple-event",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "inside-complaint",
+   "id": "confidential-gravity",
    "metadata": {},
    "outputs": [],
    "source": []
