--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,22 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T10:36:13.598457Z",
-     "start_time": "2021-01-27T10:36:12.692375Z"
+     "end_time": "2021-01-27T10:37:19.910521Z",
+     "start_time": "2021-01-27T10:37:19.902547Z"
     }
    },
    "outputs": [],
    "source": [
-    "path_arxiv_crawler_1 = \"../\"\n",
-    "path_arxiv_crawler_2 = \"../arxiv_majorana_crawler\"\n",
-    "import sys\n",
-    "sys.path.append(path_arxiv_crawler_1)\n",
-    "sys.path.append(path_arxiv_crawler_2)\n",
-    "\n",
-    "from arxiv_majorana_crawler import fetch_arxiv\n"
+    "import bot_upd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-27T10:37:34.164409Z",
+     "start_time": "2021-01-27T10:37:32.708971Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "bot_upd.bot_upd()"
    ]
   },
   {
@@ -25,9 +33,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import bot_upd"
-   ]
+   "source": []
   }
  ],
  "metadata": {
