--- a/msbot/msbot_tutorial.ipynb
+++ b/msbot/msbot_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "utility-template",
+   "id": "organizational-north",
    "metadata": {},
    "source": [
     "## Sending information about one relevant paper"
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "objective-patent",
+   "id": "similar-collector",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "bacterial-supervision",
+   "id": "bound-anthropology",
    "metadata": {},
    "source": [
     "### Find relevant paper from data"
@@ -24,68 +24,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "nominated-prophet",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "designed-tunnel",
+   "execution_count": 5,
+   "id": "overhead-grass",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T10:35:55.024833Z",
-     "start_time": "2021-01-27T10:35:50.602410Z"
-    },
-    "code_folding": []
-   },
-   "outputs": [],
-   "source": [
-    "# Import fetch_arxiv\n",
-    "path_arxiv_crawler_1 = \"../../\"\n",
-    "path_arxiv_crawler_2 = \"../../arxiv_majorana_crawler\"\n",
-    "import sys\n",
-    "sys.path.append(path_arxiv_crawler_1)\n",
-    "sys.path.append(path_arxiv_crawler_2)\n",
-    "from arxiv_majorana_crawler import fetch_arxiv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "hungarian-concrete",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-01-27T07:51:15.784505Z",
-     "start_time": "2021-01-27T07:51:15.780508Z"
+     "end_time": "2021-01-27T10:49:56.661229Z",
+     "start_time": "2021-01-27T10:49:56.658230Z"
     }
    },
    "outputs": [],
    "source": [
-    "query_imput = \"search_query_list.txt\""
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "shared-imaging",
+   "execution_count": 8,
+   "id": "negative-newsletter",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T07:51:16.968229Z",
-     "start_time": "2021-01-27T07:51:15.786504Z"
+     "end_time": "2021-01-27T10:50:04.083156Z",
+     "start_time": "2021-01-27T10:50:04.078157Z"
     }
    },
    "outputs": [],
    "source": [
-    "result_list = fetch_arxiv.query_arxiv_org(debug_mode=True, query_input=query_imput)"
+    "# Import database\n",
+    "database = '..\\data_lastday.pkl'\n",
+    "data_lastday = pd.read_pickle(database)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "amber-amsterdam",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-27T10:50:08.200048Z",
+     "start_time": "2021-01-27T10:50:08.189064Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': {0: '2101.10794'},\n",
+       " 'author_list': {0: 'Juan Carlos Estrada Saldaña, Alexandros Vekris, Luka Pavešič, Peter Krogstrup, Rok Žitko, Kasper Grove-Rasmussen, Jesper Nygård'},\n",
+       " 'title': {0: 'Bias asymmetric subgap states mimicking Majorana signatures'},\n",
+       " 'arxiv_primary_category': {0: 'cond-mat.mes-hall'},\n",
+       " 'published': {0: Timestamp('2021-01-26 14:11:16')},\n",
+       " 'link': {0: 'http://arxiv.org/abs/2101.10794v1'}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_lastday"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "prescribed-intro",
+   "id": "rural-calculator",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:16.978238Z",
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "maritime-soldier",
+   "id": "likely-washer",
    "metadata": {},
    "source": [
     "### Create link to webhook in Teams"
@@ -117,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "minute-wallpaper",
+   "id": "analyzed-federation",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.086257Z",
@@ -133,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "demonstrated-employment",
+   "id": "recreational-anger",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.090226Z",
@@ -150,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fatal-order",
+   "id": "mechanical-glasgow",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.100221Z",
@@ -165,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ethical-progress",
+   "id": "surprising-indiana",
    "metadata": {},
    "source": [
     "### Fill in message and send it"
@@ -174,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "danish-viewer",
+   "id": "parliamentary-grove",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.273232Z",
@@ -189,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "possible-identification",
+   "id": "administrative-fourth",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:17.495224Z",
@@ -204,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "elder-reception",
+   "id": "incident-majority",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-27T07:51:18.470534Z",
@@ -230,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "simple-event",
+   "id": "center-conditions",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -238,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "confidential-gravity",
+   "id": "treated-sauce",
    "metadata": {},
    "outputs": [],
    "source": []
