Define functions for automatically sending teams updates

--- a/msbot/msbot_tutorial.ipynb
+++ b/msbot/msbot_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "organizational-north",
+   "id": "fiscal-drill",
    "metadata": {},
    "source": [
     "## Sending information about one relevant paper"
@@ -10,26 +10,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "similar-collector",
+   "id": "lonely-duration",
    "metadata": {},
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "bound-anthropology",
-   "metadata": {},
-   "source": [
-    "### Find relevant paper from data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "overhead-grass",
+   "execution_count": 1,
+   "id": "olympic-attribute",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T10:49:56.661229Z",
-     "start_time": "2021-01-27T10:49:56.658230Z"
+     "end_time": "2021-01-27T11:04:37.429916Z",
+     "start_time": "2021-01-27T11:04:36.740610Z"
     }
    },
    "outputs": [],
@@ -39,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "negative-newsletter",
+   "execution_count": 2,
+   "id": "polish-china",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T10:50:04.083156Z",
-     "start_time": "2021-01-27T10:50:04.078157Z"
+     "end_time": "2021-01-27T11:04:37.435712Z",
+     "start_time": "2021-01-27T11:04:37.431683Z"
     }
    },
    "outputs": [],
@@ -56,75 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "amber-amsterdam",
+   "execution_count": 3,
+   "id": "clean-cologne",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T10:50:08.200048Z",
-     "start_time": "2021-01-27T10:50:08.189064Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'id': {0: '2101.10794'},\n",
-       " 'author_list': {0: 'Juan Carlos Estrada Saldaña, Alexandros Vekris, Luka Pavešič, Peter Krogstrup, Rok Žitko, Kasper Grove-Rasmussen, Jesper Nygård'},\n",
-       " 'title': {0: 'Bias asymmetric subgap states mimicking Majorana signatures'},\n",
-       " 'arxiv_primary_category': {0: 'cond-mat.mes-hall'},\n",
-       " 'published': {0: Timestamp('2021-01-26 14:11:16')},\n",
-       " 'link': {0: 'http://arxiv.org/abs/2101.10794v1'}}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_lastday"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "rural-calculator",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-01-27T07:51:16.978238Z",
-     "start_time": "2021-01-27T07:51:16.970220Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['id', 'author_list', 'title', 'arxiv_primary_category', 'published', 'link'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "paper = result_list[0]\n",
-    "print(paper.keys())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "likely-washer",
-   "metadata": {},
-   "source": [
-    "### Create link to webhook in Teams"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "analyzed-federation",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-01-27T07:51:17.086257Z",
-     "start_time": "2021-01-27T07:51:16.981223Z"
+     "end_time": "2021-01-27T11:04:39.553860Z",
+     "start_time": "2021-01-27T11:04:39.460860Z"
     }
    },
    "outputs": [],
@@ -135,12 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "recreational-anger",
+   "execution_count": 4,
+   "id": "certified-consumption",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T07:51:17.090226Z",
-     "start_time": "2021-01-27T07:51:17.087219Z"
+     "end_time": "2021-01-27T11:04:39.766860Z",
+     "start_time": "2021-01-27T11:04:39.763867Z"
     }
    },
    "outputs": [],
@@ -152,96 +81,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "mechanical-glasgow",
+   "execution_count": 5,
+   "id": "computational-senegal",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T07:51:17.100221Z",
-     "start_time": "2021-01-27T07:51:17.092221Z"
+     "end_time": "2021-01-27T11:04:43.566698Z",
+     "start_time": "2021-01-27T11:04:40.421163Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id 2101.10794\n",
+      "author_list Juan Carlos Estrada Saldaña, Alexandros Vekris, Luka Pavešič, Peter Krogstrup, Rok Žitko, Kasper Grove-Rasmussen, Jesper Nygård\n",
+      "title Bias asymmetric subgap states mimicking Majorana signatures\n",
+      "arxiv_primary_category cond-mat.mes-hall\n",
+      "published 2021-01-26 14:11:16\n",
+      "link http://arxiv.org/abs/2101.10794v1\n"
+     ]
+    }
+   ],
    "source": [
-    "# Create the connectorcard object with the Microsoft Webhook \n",
-    "message = pymsteams.connectorcard(address_arxiv)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "surprising-indiana",
-   "metadata": {},
-   "source": [
-    "### Fill in message and send it"
+    "n_papers = len(data_lastday[\"title\"])   # Number of papers in the dataframe\n",
+    "\n",
+    "for i in range(n_papers):\n",
+    "    \n",
+    "    # Create the connectorcard object with the Microsoft Webhook \n",
+    "    message = pymsteams.connectorcard(address_arxiv)\n",
+    "    msbot.fill_message(data_lastday, i, message)\n",
+    "    message.send()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "parliamentary-grove",
+   "execution_count": 6,
+   "id": "devoted-treat",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-27T07:51:17.273232Z",
-     "start_time": "2021-01-27T07:51:17.270220Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import msbot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "administrative-fourth",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-01-27T07:51:17.495224Z",
-     "start_time": "2021-01-27T07:51:17.491232Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "msbot.fill_message(paper, message)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "incident-majority",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-01-27T07:51:18.470534Z",
-     "start_time": "2021-01-27T07:51:17.707219Z"
+     "end_time": "2021-01-27T11:05:25.445668Z",
+     "start_time": "2021-01-27T11:05:25.436631Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "message.send()"
+    "type(data_lastday)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "center-conditions",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "treated-sauce",
+   "id": "chemical-cabinet",
    "metadata": {},
    "outputs": [],
    "source": []
