--- a/telegram_bot/post_on_tg.ipynb
+++ b/telegram_bot/post_on_tg.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method Series.keys of 0    2101.10794\n",
+      "Name: id, dtype: object>\n"
+     ]
+    }
+   ],
    "source": [
-    "#import telegram \n",
+    "import telegram \n",
     "import pandas as pd\n",
     "from telegram.ext import Updater\n",
     "def post_the_message():\n",
@@ -25,7 +34,7 @@
     "    ids=data_lastday['id']\n",
     "    arxiv_primary_categories=data_lastday['arxiv_primary_category']\n",
     "    telegram_text=\" \"\n",
-    "    for i in list(ids):\n",
+    "    for i in ids.keys():\n",
     "        telegram_text=telegram_text+ published[i].strftime(\"%m/%d/%Y\")+ \"\\n \\n\"+\"'\"+ titles[i]+ \"'\" +\"\\n \\n\"+author_list[i]+\"\\n\"+links[i]+\"\\n\"+arxiv_primary_categories[i] +\"\\n \\n \\n\"\n",
     "        bot.sendMessage(chat_id='@openmajoranachannel', text=telegram_text)\n",
     "    return "
